# agentbeats-swe-verified

./: README.md  pyproject.toml
debate/: debate_judge.py  debater.py
src/swe_green_agent/: agent.py
swe_scenario/: dummy_llm.py  scenario.toml
